--- a/README.rdoc
+++ b/README.rdoc
@@ -1,5 +1,7 @@
 == README
 
+Just editing this to see how git works on it.
+
 This README would normally document whatever steps are necessary to get the
 application up and running.
 
